--- a/frontend/apps/app/components/CommonLayout/GlobalNav/RecentsSection/components/SessionFilterDropdown/SessionFilterDropdown.module.css
+++ b/frontend/apps/app/components/CommonLayout/GlobalNav/RecentsSection/components/SessionFilterDropdown/SessionFilterDropdown.module.css
@@ -7,8 +7,9 @@
   width: 0.75rem;
   height: 0.75rem;
   color: var(--overlay-70);
+  margin-left: auto;
 }
 
 .dropdownContent {
-  min-width: 200px;
+  width: 15rem;
 }
